# ChessEngine

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  ChessEngine.project  Dockerfile  Doxyfile  Makefile  README.md  board_state.cpp  piece.cpp  run_chess_engine.sh
.github/workflows/: build.yml
dependencies/: vcpkg.json
dev/docker/dev_env/: Dockerfile  run_build_container.sh
dev/docker/run_chess_engine/: Dockerfile  run_chess_engine.sh
dev/hooks/: pre-commit
hooks/: pre-commit
include/: best_move_finder.h  board_state.h  chess_engine.h  constants.h  cross_plat_functions.h  engine_constants.h  fen_interface.h  move.h  move_generator.h  move_interface.h  piece.h  position_evaluator.h  search_engine.h  test_one.h  thread_handler.h  transposition_table.h
include/pieces/: piece.h
src/: attack_check.cpp  attack_check.h  best_move_finder.cpp  board_state.cpp  board_state.h  chess_engine.cpp  chess_engine.h  cross_plat_functions.cpp  cross_plat_functions.h  engine_constants.h  fen_interface.cpp  fen_interface.h  main.cpp  main_cli.cpp  main_uci.cpp  move.cpp  move.h  move_generator.cpp  move_generator.h  move_interface.cpp  move_interface.h  node_context.cpp  node_context.h  piece.cpp  piece.h  position_evaluator.cpp  position_evaluator.h  search_engine.cpp  search_engine.h  test_one.cpp  thread_handler.cpp  thread_handler.h  transposition_table.cpp  transposition_table.h  uci.h  uci_engine.cpp  uci_engine.h
testing/: default_settings.txt  input_test.txt
testing/chess_board_configurations/: black_can_stalemate.txt  black_has_mate_lines.txt  engine_near_checkmate.txt
testing/chess_board_fen_configs/: bad_moves_for_engine.txt  black_has_mate_lines.txt  castle_queen_side_test.txt  complex_winning_position.txt  early_mated_vs_space_engine_black_black.txt  engine_bad_move.txt  engine_cant_see_checkmate.txt  engine_looping_again.txt  engine_misses_mate_in_one.txt  engine_misses_tactic.txt  engine_stupid_queen_move.txt  horizon_effect.txt  quick.txt
testing/games_played/: win_vs_1195
tests/: move_generator_tests.cpp
